# sapy

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  conanfile.py  conanfile.txt  package.sh
bench/: CMakeLists.txt  bench.cpp  bench.h  dict_bench.cpp  list_bench.cpp  main.cpp  set_bench.cpp  str_bench.cpp  wrapper_bench.cpp
include/sapy/: panywrapper.h  pbytes.h  pcollection_interface.h  pconnection.h  pdict.h  pdictT.hpp  piterator.h  plist.h  plistT.hpp  pmodel.h  pobject.h  pset.h  psetT.hpp  pstring.h  putility.h
include/sapy/base/: pbytes.h  phashable_interface.h
include/sapy/collection/: pcollection_interface.h  pcomparer.h  pdict_interface.h  phashdict.h  phashset.h  piterator_interface.h  pkeyvaluepair.h  plist.h  plist_interface.h  pset.h  pset_interface.h  psorter.h
src/: CMakeLists.txt  panywarpper.cpp  pbytes.cpp  pdict.cpp  plist.cpp  pobject.cpp  pset.cpp  pstring.cpp  putility.cpp
test/: CMakeLists.txt  another.cpp  another.h  main.cpp
